# chaos4

./: README.md  main.py  pyproject.toml  stress_test.py
.github/workflows/: workflow.yml
chaos4/: __init__.py
chaos4/analysis/: __init__.py  metrics.py
chaos4/integrators/: solver.py
chaos4/viz/: __init__.py  plotting.py
tests/: test_core.py
