[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos4"
version = "0.1.0"
authors = [
  { name="Vecture Laboratories", email="alignment@vecture.de" },
]
description = "High-performance Python library for 4th-order chaotic systems and Snap dynamics."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
]

[project.urls]
"Homepage" = "https://www.vectrue.de"
"Repository" = "https://github.com/VectureLaboratories/chaos4"

[tool.setuptools.packages.find]
where = ["."]
include = ["chaos4*"]
